# GISC-CPU

./: CMakeLists.txt  README.md
assembler/: CMakeLists.txt
assembler/src/c/: assembler.c  disassembler.c  error.c  eval.c  main.c  scanner.c  table.c
assembler/src/include/: assembler.h  disassembler.h  error.h  eval.h  scanner.h  table.h
src/c/: assembler.c  eval.c  main.c  scanner.c  vm.c
src/include/: eval.h  scanner.h  vm.h
vm/: CMakeLists.txt
vm/src/c/: main.c  vm.c
vm/src/include/: vm.h
